styles/main.css
/* Main Styling & Layout */

body {
  padding: 0;
  padding-bottom:47px;
}

h3 {
  margin-top:0
}

.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}



/* Utilities */

.fixPadding {
  padding-bottom:1em;
  padding-top:1em;
}

.clickable:hover {
  cursor:pointer;
} 


/* Specific Items */
.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

.timecode {
  position:absolute;
  bottom:0;right:0;
  padding:4px;
  width:100%;
  display:block;
  text-align:right;
}

.timecode:hover {
  background-color:rgba(0,0,0,.5);
}
.rating>i{
  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
  color:rgba(255,255,255,.75);
}
.rating>.fa-star{
  color:gold;
}
.rating>.fa-star-o{
  color:rgba(255,255,255,.5);
}
.rating>i:hover{
  color:gold;
}
.rating:hover{
  cursor: pointer;
}

.tags{
  margin-left:.5em;
  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
  color:rgba(255,255,255,.75);
}
.tooFewTags{
  color:red;
  font-weight: bold;
}
.enoughTags{
  display: none;
}

.leftSideThing {
  min-height:60vh;
  position:relative;
}

.input-group-addon {
  font-size: 50%!important;
  text-transform: uppercase!important;
}

.leftPreview {
  transition: all .25s;
  width:100%;height:60vh; 
  background-position:center center;  
  background-repeat:no-repeat; 
  background-size:contain;
}

.editingBackground {
  -webkit-filter: blur(10px);
  opacity:0.5;
  background-size:cover;
}

.playButton {
  color:rgba(255,255,255,.01);
}

a:hover .playButton {
  color:rgba(255,255,255,.25);
}

.film-credit {
  margin-right:.25em;
  margin-left:.25em;
  padding-right:.25em;
  padding-left:.25em;
  display: inline-block;
  border-bottom:2px solid rgba(white,0.01);
  transition: 0.5s ease;
}

.film-credit:hover {
  border-bottom:2px solid black;
  cursor: pointer;
}

.screenshot {
  max-height:30vh;
  width:auto;
}

.container-narrow > hr {
  margin: 30px 0;
}

.videoBlock {
  background-size:cover;
  background-position:center center;
  transition: background-image .25s;
}
.videoBlock > a {
  height:100%; 
  width:100%;
  display:block;
}
.videoBlock > a > i {
  font-size:10vh;  
  padding-top:10vh;
}
.videoBlockEdit {
  overflow-y:scroll;
}

.statusBar {
  text-align: left;
  z-index: 2000;
  width: 100%;
  font-size: 75%;
  height: auto;
  position: fixed;
  bottom: 2em;
  left: 0;
  background-color: rgba(0,0,0,.87);
  color: rgba(255,255,255,.87);
  overflow-wrap: break-word;
}
.advancedFilters .input-group-addon {
  text-transform: uppercase;
}

.addTagButton{
  margin-right:3px;
}

.form-control{
  background-color: rgba(255,255,255,.1);
  color: white;
  border-bottom: 2px solid rgba(255,255,255,.5);
}
.unclutter{
  opacity: .1;
}
.unclutter:hover{
  opacity: 1;
}

.navbar{
  height:45px!important;
}
.sidebar{
  background-color:#222222;
    margin: 0;
    top: 0;
    left: -1000px;
    opacity: 0;
    height:100vh;
    position: fixed;
    border-right:2px solid #464545;
    z-index: 9001;
    padding:2em;
    overflow-y: scroll;
    transition:left .25s;
}
.sidebar > .input-group, .sidebar > .half-width-button{
  margin-bottom:.25em;
}

.sidebar.sidebar-visible{
  left:0;
  opacity: 1;
}
body.sidebar-visible{
  overflow: hidden;
}

.half-width-button{
  width:49%
}
.sidebarBackgroundHide{
  background-color:rgba(0,0,0,.5);
  height:100%;
  width:100%;
  overflow: hidden;
  top:0;
  left:0;
  position: fixed;
  transition:all .5s;
}
.topBar{
  background-color:#111;
  border-bottom:1px solid black;
  margin-bottom:.5em;
  padding:.2em;
}
.bottomBar{
  padding-top:.75em;
  background-color:rgba(0,0,0,.85);
  border-top:2px solid rgba(0,0,0,.95);
}

